// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserAdminPassword/> should render, with viewer as other user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <h2
    className="page-header"
  >
    <FormattedMessage
      id="user.profile.edit.password"
      values={Object {}}
    />
  </h2>
  <form
    onSubmit={[MockFunction]}
  >
    <div
      className="box-content box-content__content-form"
    >
      <Field
        component={[Function]}
        disabled={true}
        divClassName="col-sm-6"
        id="password-form-current"
        label={
          <FormattedMessage
            id="form.current_password"
            values={Object {}}
          />
        }
        name="current_password"
        type="password"
      />
      <div
        className="clearfix"
      />
      <Field
        component={[Function]}
        disabled={true}
        divClassName="col-sm-6"
        id="password-form-new_password"
        label={
          <FormattedMessage
            id="new-password-admin"
            values={Object {}}
          />
        }
        name="new_password"
        type="password"
      />
      <div
        className="clearfix"
      />
      <div
        className="clearfix"
      />
      <ButtonToolbar
        bsClass="btn-toolbar"
        className="col-sm-6 pl-0"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={true}
          id="user-admin-password-save"
          type="submit"
        >
          <FormattedMessage
            id="global.save_modifications"
            values={Object {}}
          />
        </Button>
        <AlertForm
          errorMessage={null}
          invalid={false}
          submitFailed={false}
          submitSucceeded={false}
          submitting={false}
          valid={true}
        />
      </ButtonToolbar>
    </div>
  </form>
</div>
`;

exports[`<UserAdminPassword/> should render, with viewer as user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <h2
    className="page-header"
  >
    <FormattedMessage
      id="user.profile.edit.password"
      values={Object {}}
    />
  </h2>
  <form
    onSubmit={[MockFunction]}
  >
    <div
      className="box-content box-content__content-form"
    >
      <Field
        component={[Function]}
        disabled={false}
        divClassName="col-sm-6"
        id="password-form-current"
        label={
          <FormattedMessage
            id="form.current_password"
            values={Object {}}
          />
        }
        name="current_password"
        type="password"
      />
      <div
        className="clearfix"
      />
      <Field
        component={[Function]}
        disabled={false}
        divClassName="col-sm-6"
        id="password-form-new_password"
        label={
          <FormattedMessage
            id="new-password-admin"
            values={Object {}}
          />
        }
        name="new_password"
        type="password"
      />
      <div
        className="clearfix"
      />
      <div
        className="clearfix"
      />
      <ButtonToolbar
        bsClass="btn-toolbar"
        className="col-sm-6 pl-0"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={false}
          id="user-admin-password-save"
          type="submit"
        >
          <FormattedMessage
            id="global.save_modifications"
            values={Object {}}
          />
        </Button>
        <AlertForm
          errorMessage={null}
          invalid={false}
          submitFailed={false}
          submitSucceeded={false}
          submitting={false}
          valid={true}
        />
      </ButtonToolbar>
    </div>
  </form>
</div>
`;
